Настроил JS для работы модалки

--- a/src/partials/backdrop-modal.html
+++ b/src/partials/backdrop-modal.html
@@ -1,5 +1,10 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="modal-window">
+    <button class="close-btn-mobile animate" type="button">
+      <svg class="close-btn-icon" width="17" height="17">
+        <use class="close-btn-icon" href="./images/sprite.svg#close"></use>
+      </svg>
+    </button>
     <button class="close-btn animate" type="button">
       <svg class="close-btn-icon" width="17" height="17">
         <use class="close-btn-icon" href="./images/sprite.svg#close"></use>
