--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,20 +4,20 @@
     <nav class="navigation">
       <!-- LOGO -->
       <div class="logo-wrapper">
-      <a class="logo" href="index.html">
-        <div class="logo-secondfloor">
-          Hell
-          <svg class="logo-fire" width="13.93" height="19.38">
-            <use href="./images/sprite.svg#icon-fire"></use>
-          </svg>
-          EN
-        </div>
-        <div class="logo-firstfloor">
-          <span class="accent">адский </span>
-          <span class="eng">английский</span>
-        </div>
-      </a>
-    </div>
+        <a class="logo" href="index.html">
+          <div class="logo-secondfloor">
+            Hell
+            <svg class="logo-fire" width="13.93" height="19.38">
+              <use href="./images/sprite.svg#icon-fire"></use>
+            </svg>
+            EN
+          </div>
+          <div class="logo-firstfloor">
+            <span class="accent">адский </span>
+            <span class="eng">английский</span>
+          </div>
+        </a>
+      </div>
 
       <!-- NAV-DESKTOP-->
       <ul class="nav-list-desktop">
@@ -47,7 +47,6 @@
       </div>
       <!-- BURGER-MENU  -->
       <div class="burger-menu container" id="menu-container" data-menu>
-
         <!-- BURGER-MENU NAVIGATION -->
         <ul class="nav-list">
           <li class="nav-item">
@@ -64,7 +63,9 @@
           </li>
         </ul>
         <!-- BURGER-MENU BUTTON  -->
-        <button type="button" class="btn">консультация по телефону</button>
+        <button type="button" class="btn header-mobile-btn">
+          консультация по телефону
+        </button>
       </div>
     </nav>
   </div>
