Размери контейнера на табе
height: 450px

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -33,13 +33,13 @@
       width: 768px;
       padding-left: 34px;
       padding-right: 34px;
+      height: 450px;
     }
   
     @media screen and (min-width: 1280px) {
       width: 1280px;
       padding-left: 115px;
       padding-right: 115px;
-
     }
   }
   
