--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -26,11 +26,8 @@
         }      
     } 
 }
-.benefits-description {
-    padding-bottom: 15px;  
-    background-size: cover;
-    background-repeat: no-repeat;
-    @media screen and (min-device-pixel-ratio: 2),
+
+@media screen and (min-device-pixel-ratio: 2),
     screen and (-webkit-min-device-pixel-ratio: 2),
     screen and (-o-min-device-pixel-ratio: 2/1),
     screen and (min-resolution: 192dpi),
@@ -39,6 +36,25 @@
     background-image: url(../images/splashing_milk@2x.jpg);
     }
     }
+
+@media screen and (min-width: 1200px) {
+   .benefits-description {
+    background-image: url(../images/splashing_milk@2x.jpg);
+    }
+     
+        @media screen and (min-device-pixel-ratio: 2){
+        .benefits-description {
+            background-image: url(../images/splashing_milk@2x.jpg);
+        }   
+        }
+}
+
+.benefits-description {
+    
+    padding-bottom: 15px;  
+    background-size: cover;
+    background-repeat: no-repeat;
+   
     & p {
     margin-top: 45px;
     margin-bottom: 30px;
@@ -62,28 +78,28 @@
         justify-content: space-evenly;
         width: auto;
         }
-    @media screen and (min-width: 1200px) {
-        background-image: url(../images/splashing_milk@2x.jpg);
-        background-size: cover;
-        width: 100%;
-        }
-}
-.special {
-    @media screen and (min-device-pixel-ratio: 1),
-    screen and (-webkit-min-device-pixel-ratio: 1),
-    screen and (-o-min-device-pixel-ratio: 2/1),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .benefits-description  {
+    }
+
+    .special {
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+
+    @media screen and (max-width: 767px) {
+    .special {
     background-image: url(../images/splashing_milk.jpg);
     }
-    }
-    @media screen and (max-width: 767px) {
-        background-image: url(../images/splashing_milk.jpg);
-        background-size: cover;
-        width: 100%;
+      
+        @media screen and (min-device-pixel-ratio: 1){
+        .special {
+             background-image: url(../images/splashing_milk.jpg);
+        }   
         }
 }
+
+
+
+
 .benefits-list {
     @media screen and (min-width: 768px) {
         display: flex;
