--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -19,7 +19,7 @@ color:#FF6B09;
 }
 .section-problems{
 width: 280px; 
-bottom: -195px;
+bottom: -170px;
 padding-left: 30px;
 padding-top: 27px;
 padding-bottom: 27px;
@@ -46,7 +46,7 @@ position: relative;
     width: 20px;
     height: 2px;
     color:#FF6B09;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .problem-list-item .accent-line::after{
@@ -73,12 +73,11 @@ position: relative;
     .problems{
         height: 340px;
         padding-top: 60px;
-        margin-top: 50px;
     }
     .section-problems{
         padding-left: 96px;
         width: 688px;
-        bottom: -160px;
+        bottom: -145px;
     }
     .problems-text{
         width: 558px;
@@ -137,6 +136,9 @@ position: relative;
     }
     .problem-list-item:nth-child(-n+3){
         margin-bottom: 40px;}
+        .problem-list-item .accent-line::before{
+            margin-bottom: 20px;
+        }
 }
   
 
