--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <div class="footer-text">
     <h2 class="footer-row">homemade ice cream made</h2>
-    <span>with passion</span>
+    <p class="footer-text-row">with passion</p>
   </div>
   <div class="footer-socials">
-    <ul class="footer-socials-list list">
+    <ul class="footer-socials-list">
       <li class="socials-item">
-        <a class="socials-link link" href="https://github.com/"></a>
+        <a class="socials-link" href="https://github.com/"></a>
         <svg class="socials-icon" width="32" height="32">
           <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
         </svg>
@@ -18,7 +18,7 @@
         </svg>
       </li>
       <li class="socials-item">
-        <a class="socials-link link" href="https://www.facebook.com/"></a>
+        <a class="socials-link" href="https://www.facebook.com/"></a>
         <svg class="socials-icon" width="32" height="32">
           <use href="./images/icons/symbol-defs.svg#icon-facebook.svg"></use>
         </svg>
