--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -16,13 +16,14 @@
   margin-bottom: 17px;
   padding-right: 100px;
   padding-bottom: 43px;
-
-  & span {
-    font-size: 34px;
-    line-height: 1.14;
-
-    color: $titleTextColor;
-  }
+}
+.footer-text-row {
+  font-size: 34px;
+  line-height: 1.14;
+  font-family: Titan One;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
 }
 
 .footer-list {
@@ -66,6 +67,7 @@
   width: 32px;
   height: 32px;
   margin-left: 28px;
+  list-style: none;
 }
 .socials-icon {
   position: absolute;
