Добавил позиционирование на шапку

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -13,13 +13,25 @@
 
   @include for-size(tablet) {
     justify-content: flex-start;
-    align-items: flex-start;
     padding-top: 37px;
   }
+
+  @include for-size(desktop) {
+    justify-content: space-between;
+  }
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
   display: inline-block;
+
+  @include for-size(desktop) {
+    margin-right: 60px;
+  }
 }
 
 .navigation-btn {
@@ -43,6 +55,10 @@
   line-height: 1.3125;
   text-align: center;
   color: $titleTextColor;
+
+  @include for-size(desktop) {
+    width: 159px;
+  }
 }
 
 .navigation-btn-icon {
