--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,30 +1,77 @@
-<section class="products">
-    <p>100% natural</p>
-    <h2>products</h2>
-    <ul>
-        <li>
-            <h3>ice cream</h3>
-            <p>...</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et
-            </p>
+<section class="section-products">
+<div  class="container">
+    <p class="pretitul-two">100% natural</p>
+    <h2 class="titul-two" id="products">products</h2>
+    <ul class="products-list">
+        <li class="products-item">
+            <div>
+                <picture>
+                    <source
+                        srcset="./images/products/desktop-product1-min.png 1x, ./images/products/desktop-product1@2x-min.png 2x"
+                        media="(min-width:1200px)" />
+
+                    <source
+                        srcset="./images/products/tab-product1-min.png 1x, ./images/products/tab-product1@2x-min.png 2x"
+                        media="(min-width:768px)" />
+                    <img class="products-images" srcset="./images/products/mob-product1-min.png 1x, ./images/products/mob-product1@2x-min.png 2x"
+                        src="./images/products/mob-product1-min.png" alt="ice cream products" />
+                </picture>
+                <h3 class="title-three">ice cream</h3>
+                <p class="title-three">...</p>
+                <p class="products-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et
+                </p>
+                <a class="products-link" href="#"> <svg class="products-icon" width="40" height="40">
+                        <use href="./images/svg/sprite.svg#icon-right-arrow"></use>
+                    </svg> </a>
+            </div>
         </li>
-        <li>
-            <h3>ice coffee</h3>
-            <p>...</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et
-            </p>
+        <li class="products-item">
+            <div>
+                <picture>
+                    <source
+                        srcset="./images/products/desktop-product2-min.png 1x, ./images/products/desktop-product2@2x-min.png 2x"
+                        media="(min-width:1200px)" />
+
+                    <source
+                        srcset="./images/products/tab-product2-min.png 1x, ./images/products/tab-product2@2x-min.png 2x"
+                        media="(min-width:768px)" />
+                    <img class="products-images" srcset="./images/products/mob-product2-min.png 1x, ./images/products/mob-product2@2x-min.png 2x"
+                        src="./images/products/mob-product2-min.png" alt="ice coffee products" />
+                </picture>
+                <h3 class="title-three">ice coffee</h3>
+                <p class="title-three">...</p>
+                <p class="products-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                </p>
+                <a class="products-link" href="#"> <svg class="products-icon" width="40" height="40">
+                        <use href="./images/svg/sprite.svg#icon-right-arrow"></use>
+                    </svg> </a>
+            </div>
         </li>
-        <li>
-            <h3>milkshakes</h3>
-            <p>...</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et
-            </p>
+        <li class="products-item">
+            <div>
+                <picture>
+                    <source
+                        srcset="./images/products/desktop-product3-min.png 1x, ./images/products/desktop-product3@2x-min.png 2x"
+                        media="(min-width:1200px)" />
+                    <source
+                        srcset="./images/products/tab-product3-min.png 1x, ./images/products/tab-product3@2-min.png 2x"
+                        media="(min-width:768px)" />
+                    <img class="products-images" srcset="./images/products/mob-product3-min.png 1x, ./images/products/mob-product3@2x-min.png 2x"
+                        src="./images/products/mob-product3-min.png" />
+                </picture>
+                <h3 class="title-three">milkshakes</h3>
+                <p class="title-three">...</p>
+                <p class="products-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et</p>
+                <a class="products-link" href="#"> <svg class="products-icon" width="40" height="40">
+                        <use href="./images/svg/sprite.svg#icon-right-arrow"></use>
+                    </svg> </a>
+            </div>
         </li>
     </ul>
+</div>
 </section>
