--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -45,6 +45,20 @@
   }
 }
 
+.title-three{
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+
+
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
 
 /*      
