--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -5,6 +5,7 @@
   line-height: 0;
   color: var(--primary-text-color);
   z-index: 3;
+  transition: all var(--transition-function);
 }
 
 .burger-menu.is-open + .logo {
