--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -11,14 +11,12 @@
     margin-bottom: -25px;
     padding-bottom: 25px;
 
-    .container {
-      height: 100%;
+    height: 100%;
 
-      background-image: url(../images/hero/girls-mobile.png);
-      background-size: 208px 177.5px;
-      background-position: center bottom 47px;
-      background-repeat: no-repeat;
-    }
+    background-image: url(../images/hero/girls-mobile.png);
+    background-size: 208px 177.5px;
+    background-position: center bottom 47px;
+    background-repeat: no-repeat;
   }
   &__body {
     height: 618px;
@@ -132,12 +130,10 @@
       margin-bottom: -10px;
       padding-bottom: 10px;
 
-      .container {
-        background-image: url(../images/hero/girls-tablet.png);
-        background-size: 376px 320px;
-        background-position: right 18px bottom 64px;
-        background-repeat: no-repeat;
-      }
+      background-image: url(../images/hero/girls-tablet.png);
+      background-size: 376px 320px;
+      background-position: calc(50% + 180px) 172px;
+      background-repeat: no-repeat;
     }
     &__body {
       height: 556.5px;
@@ -204,12 +200,11 @@
       margin-bottom: -10px;
       padding-bottom: 10px;
 
-      .container {
-        background-image: url(../images/hero/girls-desktop.png);
-        background-size: 842px 718px;
-        background-position: right -120px bottom 20px;
-        background-repeat: no-repeat;
-      }
+      background-image: url(../images/hero/girls-desktop.png);
+      background-size: 842px 718px;
+      background-position: calc(50% + 380px) 150px;
+      background-repeat: no-repeat;
+      // right -120px bottom 20px
     }
 
     &__body {
@@ -279,13 +274,13 @@
   }
 }
 
-@media screen and (min-width: 1688px) {
-  .hero {
-    .container {
-      max-width: 1688px;
-      padding-left: 183px;
-      padding-right: 183px;
-      background-position: right bottom 20px;
-    }
-  }
-}
+// @media screen and (min-width: 1688px) {
+//   .hero {
+//     .container {
+//       max-width: 1688px;
+//       padding-left: 183px;
+//       padding-right: 183px;
+//       background-position: right bottom 20px;
+//     }
+//   }
+// }
