main button modal open

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,7 +49,7 @@
                         <button
                           class="close-button"
                           aria-label="Закрыть окно заказа услуг"
-                          data-modal-close data-modal-close2
+                          data-modal-close
                         >
                           <svg class="close-button-img">
                             <use href="./images/header/sprite-hero.svg#icon-close"></use>
