--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,9 @@
 @import './utils/variables';
 @import './base/common';
 @import './components/components';
+@import './components/logo';
 
+@import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
 @import './layout/benefits';
@@ -10,4 +12,5 @@
 @import './layout/reasons';
 @import './layout/teacher';
 @import './layout/guarantees';
+@import './layout/reviews';
 @import './layout/form';
