--- a/src/sass/layouts/_review.scss
+++ b/src/sass/layouts/_review.scss
@@ -130,31 +130,39 @@
   position: relative;
   z-index: 0;
 
-  width: 165px;
+  width: 180px;
+  padding: 0 7px;
 
   text-align: center;
   font-weight: 500;
   font-size: 12px;
-  line-height: 2.55;
+  line-height: 30px;
   color: $primaryTextColor;
 
+  background-image: repeating-linear-gradient(
+    #e1e1e1 0px 1px,
+    transparent 1px 30px
+  );
+  background-position-y: -1px;
+
   @include for-size(tablet) {
-    width: 460px;
+    width: 500px;
+    padding: 0 20px;
 
     font-size: 14px;
-    line-height: 2.16;
   }
 
   @include for-size(desktop) {
-    width: 750px;
+    width: 810px;
+    padding: 0 30px;
+
     font-size: 16px;
-    line-height: 1.86;
   }
 
   &::before {
     position: absolute;
     z-index: -1;
-    left: 4px;
+    left: 11px;
     top: -15px;
 
     content: '';
@@ -168,12 +176,12 @@
     background-position: center;
 
     @include for-size(tablet) {
-      left: -40px;
+      left: -23px;
       top: -17px;
     }
 
     @include for-size(desktop) {
-      left: -37px;
+      left: -7px;
       top: -15px;
     }
   }
