--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -318,6 +318,7 @@
         background: #FFFFFF;
         justify-content: center;
         margin-left: 60px;
+        margin-top: 0;
     }
     .header-nav{
         padding-top: 33px;
@@ -329,6 +330,6 @@
         margin-right: 40px;
     }
     .header-nav-logo{
-        margin-right: 127px;
+        margin-right: 207px;
     }
 }
