changes html and css (button, text, hover)

--- a/src/partials/traditions.html
+++ b/src/partials/traditions.html
@@ -1,8 +1,7 @@
 <section class="traditions" id="traditions">
-  <div class="container trad-container">
-    <!-- <div class="background-milk"></div> -->
     <div class="background-milk left"></div>
     <div class="background-milk right"></div>
+  <div class="container trad-container">
     <h2 class="trad-title">tradition and love</h2>
     <h3 class="trad-subtitle">how it’s made?</h3>
     <div class="trad-group">
@@ -16,18 +15,19 @@
         />
         <source
           srcset="
-            ./images/traditions/home-pic-tablet.png    1x,
-            ./images/traditions/home-pic-tablet@2x.png 2x
-          "
-          media="(min-width:320px)"
-        />
-        <source
-          srcset="
             ./images/traditions/home-pic-desktop.png    1x,
             ./images/traditions/home-pic-desktop@2x.png 2x
           "
           media="(min-width:1200px)"
         />
+        <source
+          srcset="
+            ./images/traditions/home-pic-tablet.png    1x,
+            ./images/traditions/home-pic-tablet@2x.png 2x
+          "
+          media="(min-width:320px)"
+        />
+        
         <img
           src="./images/traditions/home-pic-tablet.png"
           alt="ecological milk"
@@ -56,18 +56,18 @@
     <ul class="trad-list">
       <li class="trad-item">
         <img src="./images/traditions/icon1.png" alt="fresh milk" />
-        <h4>721</h4>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h4 class="trad-heading">721</h4>
+        <p>litri di latte che riceviamo giornalmente dalle nostre mucche. Le nostre mucche pascolano sui prati delle oche ai piedi delle Alpi.</p>
       </li>
       <li class="trad-item">
         <img src="./images/traditions/icon2.png" alt="natural fructs" />
-        <h4>16kg</h4>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h4 class="trad-heading">16kg</h4>
+        <p>frutta fresca che ogni giorno utilizziamo nella produzione del nostro gelato. Tutti i frutti sono ottenuti da aziende biologiche o allo stato brado. Tra i frutti principali: fragole, lamponi, mirtilli, mele, pere e altri.</p>
       </li>
       <li class="trad-item">
         <img src="./images/traditions/icon3.png" alt="ecologic product" />
-        <h4>84</h4>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h4 class="trad-heading">84</h4>
+        <p>Attualmente offriamo tipi di prodotti nel nostro catalogo di prodotti per il congelamento ed ecologici. Questi includono gelati, frullati, bevande fredde al caffè, ravioli, cotolette e altro ancora.</p>
       </li>
     </ul>
     <div class="reviews-bg-photo"></div>
