--- a/src/sass/components/traditions/_traditions.scss
+++ b/src/sass/components/traditions/_traditions.scss
@@ -168,6 +168,7 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 1.28;
+  border: 1px solid ;
 
   transition: 250ms;
 
@@ -183,6 +184,7 @@
   &:focus .read-more-img {
     transform: scale(1.1);
     background-color: #ecebeb;
+    box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4);
   }
 
   @media screen and (min-width: $tablet) {
@@ -200,6 +202,17 @@
   }
 }
 
+.trad-item {
+
+    &:hover .trad-heading {
+        transform: translate(10%, 5%) scale(1.1);
+    } 
+
+    @media screen and (min-width: $tablet) {
+        width: 30%;
+    }
+}
+
 .trad-item:not(:last-child) {
   margin-bottom: 38px;
 
@@ -213,7 +226,9 @@
   }
 }
 
-.trad-item > h4 {
+.trad-heading {
+  position: relative;
+  
   margin-top: 16px;
   margin-bottom: 20px;
 
@@ -225,6 +240,8 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $main-red-color;
+  z-index: 4;
+  transition: 250ms;
 
   @media screen and (min-width: $tablet) {
     margin-top: 36px;
