--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -5,19 +5,18 @@
 .hero-section {
   background-repeat: no-repeat;
 
-  @media screen and (max-width: 739px) {
+  @media screen and (max-width: 767px) {
     padding-top: 92px;
-    padding-bottom: 160px;
+    padding-bottom: 118px;
 
     background-image: url('./../images/hero/icecream/icecream-tablet@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 171px 410px, 346px 344px;
-    background-position: left calc(50% + 40px) bottom,
+    background-position: left calc(50% + 40px) top 9px,
       left calc(50% + 46px) top 0px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     background-image: url('./../images/hero/girl/girl-tablet@1x.png'),
       url('./../images/hero/icecream/icecream-tablet@1x.png'),
       url('./../images/hero/eclipse.svg');
@@ -26,8 +25,7 @@
       left calc(50% + 65px) bottom, left calc(50% + 85px) top 35px;
   }
 
-  @media screen and (min-width:1280px) {
-
+  @media screen and (min-width: 1200px) {
     background-image: url('./../images/hero/girl/girl-desktop@1x.png'),
       url('./../images/hero/icecream/icecream-desktop@1x.png'),
       url('./../images/hero/eclipse.svg');
@@ -36,7 +34,6 @@
       left calc(50% + 100px) bottom, left calc(50% + 130px) top 50px;
   }
 }
-
 
 .header {
   width: 100%;
@@ -88,7 +85,7 @@
     }
   }
 
-  @media screen and (max-width: 1279px) {
+  @media screen and (max-width: 1200px) {
     display: none;
   }
 }
@@ -141,11 +138,9 @@
 
   @media screen and (min-width: 768px) {
     padding-right: 7px;
-    
   }
 
-  @media screen and (min-width: 1280px) {
-    
+  @media screen and (min-width: 1200px) {
     padding-left: 70px;
     padding-right: 70px;
   }
@@ -168,7 +163,7 @@
     font-size: 22px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     max-width: 277px;
     font-size: 24px;
   }
@@ -185,7 +180,7 @@
       font-size: 37px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       font-size: 58px;
     }
   }
@@ -223,7 +218,7 @@
 }
 
 .places {
-  @media screen and (max-width: 739px) {
+  @media screen and (max-width: 767px) {
     display: none;
   }
 }
@@ -245,7 +240,7 @@
     border-radius: 50%;
     background-color: getColor(white-color);
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       width: 30px;
       height: 30px;
     }
@@ -255,7 +250,7 @@
 .places-item:not(:last-child) {
   margin-bottom: 17px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 20px;
   }
 }
@@ -277,7 +272,7 @@
 
   color: getColor(title);
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 46px;
     line-height: 1.13;
   }
@@ -291,7 +286,7 @@
 
   color: getColor(white-color);
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 14px;
     line-height: 1.3;
   }
@@ -301,7 +296,7 @@
   display: flex;
   align-items: flex-end;
 
-  @media screen and (max-width: 739px) {
+  @media screen and (max-width: 767px) {
     display: none;
   }
 }
@@ -310,7 +305,7 @@
   max-width: 115px;
   padding-bottom: 6px;
 
-  @media screen and (min-width:1280px) {
+  @media screen and (min-width: 1200px) {
     max-width: 200px;
     padding-bottom: 11px;
   }
@@ -323,7 +318,7 @@
     display: inline-block;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-right: 30px;
   }
 }
@@ -339,7 +334,7 @@
 
   color: getColor(white-color);
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 20px;
 
     font-size: 14px;
@@ -356,7 +351,7 @@
   background-color: getColor(white-color);
   border-radius: 50%;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 26px;
     height: 26px;
   }
