Add styles to program

--- a/src/sass/layout/_programs.scss
+++ b/src/sass/layout/_programs.scss
@@ -154,7 +154,7 @@
     display: flex;
   }
   .term-list-item {
-    width: 176px;
+    min-width: 176px;
 
     &:not(:last-child) {
       margin-right: 50px;
@@ -182,14 +182,10 @@
   .programs {
     margin-top: 130px;
   }
-  .programs-container.container {
-    padding-left: 0;
-    padding-right: 0;
-  }
   .programs-title {
     padding-top: 120px;
     padding-bottom: 100px;
-    padding-left: 184px;
+    padding-left: 90px;
     border-bottom: 2px solid var(--white-text-color);
 
     font-size: 46px;
@@ -199,7 +195,6 @@
   }
   .programs-list {
     padding-top: 60px;
-    padding-left: 169px;
     display: flex;
 
     &::before {
@@ -207,7 +202,7 @@
     }
   }
   .programs-list-item {
-    width: 240px;
+    min-width: 240px;
   }
   .programs-list-item:not(:last-child) {
     margin-right: 30px;
