Работа с секцией Алексея

--- a/src/partials/our_guarantees.html
+++ b/src/partials/our_guarantees.html
@@ -1,4 +1,4 @@
-<section class="our-guarantees">
+<section class="our-guarantees section">
     <h2 class="our-guarantees__title">Мы гарантируем</h2>
     <div class="our-guarantees__box">
         <ul class="our-guarantees__list">
