--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,6 +4,7 @@
             <p class="footer__first-title first-title">homemade ice cream made</p>
             <p class="footer__second-title second-title">with passion</p>
         </div>
+        <div class="footer__wrapper_right">
             <ul class="social-list">
                 <li class="social-item">
                     <a class="icon-social" href="">
@@ -28,16 +29,17 @@
                     </a>
                 </li>
             </ul>
-            <div>
-                <b class="footer__contact">Feel free to contact 
+            <div class="footer__contact">
+                <b>Feel free to contact 
                     <span>
                         +61 (0) 383 766 284
                     </span>
                 </b>
             </div>
-            <div class=hr_line></div>
-            <div class="footer__copyright">
-                <p>&copy 2019 - IceCream. All Rights Reserved.</p>
-            </div>
+        </div>
+        <div class=hr_line></div>
+        <div class="footer__copyright">
+            <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+        </div>
     </div>
 </footer>
