--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -28,12 +28,17 @@
     background-color: $main-red-color;
   }
 
+  .footer__wrapper_left {
+    width: 474px;
+    height: 117px;
+    margin-left: 3%;
+    max-width: 60%;
+    float: left;
+  }
+
   .footer__first-title {
-    position: absolute;
     width: 472px;
     height: 34px;
-    margin-left: 114px;
-    top: 4923px;
 
     font-family: Titan One;
     font-style: normal;
@@ -46,12 +51,13 @@
     color: $dark-pink-color;
   }
 
+  .container {
+    margin-top: 165px;
+  }
+
   .footer__second-title {
-    position: absolute;
     width: 474px;
     height: 66px;
-    margin-left: 112px;
-    top: 4972px;
 
     font-family: Titan One;
     font-style: normal;
@@ -65,19 +71,15 @@
   }
 
   .social-list {
-    position: absolute;
     width: 151px;
     height: 34px;
-    margin-left: 1008px;
-    top: 4923px;
+    padding-left: 53%;
   }
 
   .footer__contact {
-    position: absolute;
     width: 319px;
     height: 30px;
-    margin-left: 845px;
-    top: 5007px;
+    margin-top: 34px;
 
     font-family: DM Sans;
     font-style: normal;
@@ -90,16 +92,22 @@
     color: $main-black-color;
   }
 
+  .footer__wrapper_right {
+    width: 319px;
+    height: 117px;
+    float: right;
+    margin-right: 4%;
+    margin-bottom: 97px;
+  }
+
   .footer__contact span {
     color: $main-red-color;
   }
 
   .footer__copyright {
-    position: absolute;
     width: 1280px;
     height: 26px;
-    padding-left: 502px;
-    top: 5144px;
+    margin-left: 39%;
 
     font-family: DM Sans;
     font-style: normal;
@@ -113,16 +121,12 @@
   }
 
   .hr_line {
-    border-top: solid 1px grey;
-    position: absolute;
+    border-top: solid 1px $main-grey-color;
     width: 1280px;
-    margin-left: 0px;
-    top: 5135px;
+    clear: both;
+    margin-left: -10%;
+    margin-top: 97px;
   }
-
-  // .footer {
-  // width: 1280px;
-  // }
 }
 
 @media screen and (max-width: 1199px) {
@@ -155,36 +159,43 @@
     background-color: $main-red-color;
   }
 
+  .footer__wrapper_left {
+    width: 340px;
+    height: 183px;
+    margin-left: 3%;
+    max-width: 60%;
+    float: left;
+  }
+
   .footer__first-title {
-    position: absolute;
     width: 340px;
     height: 57px;
-    margin-left: 34px;
-    top: 4236px;
 
     font-family: Titan One;
     font-style: normal;
     font-weight: normal;
-    font-size: 26px;
-    line-height: 30px;
+    font-size: 30px;
+    line-height: 34px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
     color: $dark-pink-color;
   }
 
+  .container {
+    margin-top: 165px;
+  }
+
   .footer__second-title {
-    position: absolute;
     width: 340px;
     height: 110px;
-    margin-left: 34px;
-    top: 4309px;
+    margin-top: 16px;
 
     font-family: Titan One;
     font-style: normal;
     font-weight: normal;
-    font-size: 48px;
-    line-height: 55px;
+    font-size: 57px;
+    line-height: 66px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
@@ -192,45 +203,43 @@
   }
 
   .social-list {
-    position: absolute;
-    width: 162px;
+    width: 151px;
     height: 34px;
-    margin-left: 572px;
-    top: 4229px;
+    padding-left: 62%;
   }
 
   .footer__contact {
-    position: absolute;
-    width: 268px;
-    height: 26px;
-    margin-left: 466px;
-    top: 4309px;
+    width: 319px;
+    height: 30px;
+    margin-top: 50px;
 
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 186%;
 
-    text-align: right;
+    letter-spacing: 0.02em;
 
     color: $main-black-color;
   }
 
+  .footer__wrapper_right {
+    width: 268px;
+    height: 106px;
+    float: right;
+    margin-right: 9%;
+    margin-bottom: 168px;
+  }
+
   .footer__contact span {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 11px;
     color: $main-red-color;
   }
 
   .footer__copyright {
-    position: absolute;
+    width: 276px;
     height: 26px;
-    margin-left: 248px;
-    top: 4539px;
-    text-align: center;
+    margin-left: 32%;
 
     font-family: DM Sans;
     font-style: normal;
@@ -244,16 +253,11 @@
   }
 
   .hr_line {
-    border-top: solid 1px grey;
-    position: absolute;
+    border-top: solid 1px $main-grey-color;
     width: 768px;
-    margin-left: 0px;
-    top: 4510px;
+    clear: both;
+    margin-left: -10%;
   }
-
-  // .footer {
-  //   width: 772px;
-  // }
 }
 
 @media screen and (max-width: 767px) {
@@ -269,8 +273,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 34px;
-    height: 34px;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
     background-color: $light-pink-color;
   }
@@ -286,12 +290,17 @@
     background-color: $main-red-color;
   }
 
+  .footer__wrapper_left {
+    width: 232px;
+    height: 145px;
+    margin-left: 3%;
+    max-width: 60%;
+    float: left;
+  }
+
   .footer__first-title {
-    position: absolute;
     width: 232px;
     height: 42px;
-    margin-left: 22px;
-    top: 6706px;
 
     font-family: Titan One;
     font-style: normal;
@@ -303,13 +312,14 @@
     color: $dark-pink-color;
   }
 
+  .container {
+    margin-top: 113px;
+  }
+
   .footer__second-title {
-    position: absolute;
     width: 200px;
     height: 76px;
-    margin-left: 20px;
-    top: 6765px;
-
+    margin-top: 17px;
     font-family: Titan One;
     font-style: normal;
     font-weight: normal;
@@ -317,72 +327,66 @@
     line-height: 39px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-
-    color: $main-red-color;
   }
 
   .social-list {
-    position: absolute;
-    width: 152.47px;
-    height: 32px;
-    margin-left: 147px;
-    top: 6884px;
+    width: 151px;
+    height: 34px;
+    padding-left: 50%;
   }
 
   .footer__contact {
-    position: absolute;
-    width: 230px;
+    width: 232px;
     height: 22px;
-    margin-left: 70px;
-    top: 6962px;
+    margin-top: 46px;
+    margin-left: 12%;
 
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 186%;
+    /* or 22px */
 
     text-align: right;
 
     color: $main-black-color;
   }
 
+  .footer__wrapper_right {
+    width: 268px;
+    height: 106px;
+    float: right;
+    margin-right: 9%;
+    margin-bottom: 43px;
+  }
+
   .footer__contact span {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 9px;
+    font-size: 10px;
     color: $main-red-color;
   }
 
   .footer__copyright {
-    position: absolute;
     width: 150px;
     height: 42px;
-    padding-left: 0;
-    margin-left: 79px;
-    top: 7049px;
+    margin-left: 25%;
 
     font-family: DM Sans;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
-    line-height: 152%;
+    line-height: 186%;
 
-    text-align: center;
+    letter-spacing: 0.02em;
 
     color: $main-grey-color;
   }
 
   .hr_line {
-    border-top: solid 1px grey;
-    position: absolute;
+    border-top: solid 1px $main-grey-color;
     width: 320px;
-    margin-left: 0px;
-    top: 7027px;
+    clear: both;
+    margin-left: -10%;
+    margin-top: 97px;
   }
-
-  // .footer {
-  //   width: 320px;
-  // }
 }
