--- a/src/sass/layout/_our_guarantees.scss
+++ b/src/sass/layout/_our_guarantees.scss
@@ -92,6 +92,7 @@
 @media screen and (min-width: 1344px) {
   .our-guarantees__title {
     font-size: 46px;
+    margin-bottom: 50px;
   }
   .our-guarantees__item {
     font-size: 20px;
