--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -139,14 +139,14 @@ html {
   display: flex;
   flex-flow: column;
   padding-top: 60px;
-  height: 507px;
+  height: 502px;
   background-color: $menu-background-color;
   overflow-y: auto;
   width: 250px;
   border-bottom-left-radius: 5%;
   transition: 0.5s;
   @media (min-width: $tablet) {
-    height: 416px;
+    height: 408px;
   }
   @media (min-width: $desktop) {
     position: relative;
@@ -336,13 +336,13 @@ html {
   opacity: 1;
   z-index: 40;
   width: calc(100% - 2 * 15px);
-  // height: 609px;
+  height: 580px;
   background-color: $main-white-color;
   border-radius: 24px;
   padding-top: 40px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   line-height: 1.17;
   box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -353,11 +353,13 @@ html {
     padding-right: 40px;
   }
   @media (min-width: $tablet) {
-    top: 50%;
+    top: 55%;
+    height: auto;
     transform: translate(-50%, -50%) scale(1);
   }
   @media (min-width: $desktop) {
     width: 528px;
+    top: 50%;
   }
 }
 .backdrop.is-hidden .modal {
@@ -477,7 +479,7 @@ textarea {
 .order-form-item {
   display: block;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   color: $modal-input-color;
   font-family: Titan One;
   font-size: 20px;
