--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -102,6 +102,9 @@
 
 @media screen and (min-width: 768px) {
   .hero {
+    &-section {
+      overflow: hidden;
+    }
     &-container {
       padding-top: 158px;
       padding-bottom: 50px;
@@ -122,7 +125,7 @@
     }
 
     &-button {
-      margin: 0 0 142px 43px;
+      margin: 0 0 142px 0;
     }
 
     &-picture {
