Fix footer container

--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -51,9 +51,9 @@
     color: $dark-pink-color;
   }
 
-  .container {
-    margin-top: 165px;
-  }
+  // .container {
+  //   margin-top: 165px;
+  // }
 
   .footer__second-title {
     width: 474px;
