Правки background-image

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -18,7 +18,7 @@
     
     background-image: url(../images/problems/campfire.png);
     background-repeat: no-repeat;
-    background-position: left 1075px top 88px;    
+    background-position: top 88px left calc(50% + 615px);    
     background-size: 455px 472px;
     @media screen and (min-device-pixel-ratio: 2),
   screen and (-webkit-min-device-pixel-ratio: 2),
