--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -50,9 +50,13 @@
 
 // Навигация
 .nav-list {
+  position: absolute;
+  z-index: 3;
+  top: 109px;
+  left: 50%;
+  width: fit-content;
+  transform: translatex(-50%) scale(1);
   text-align: start;
-  padding-top: 108.53px;
-  padding-bottom: 50px;
 }
 
 .nav-link {
@@ -151,6 +155,7 @@
 
 /// HEADER BUTTONS
 .burger-menu .btn {
+  margin-top: 298px;
   color: var(--accent-color);
   background-color: var(--primary-white-color);
   border: 2px solid var(--accent-color);
@@ -194,14 +199,12 @@
 
 // TABLET
 @media screen and (min-width: 768px) {
-  .burger-menu {
-    font-size: 26px;
-  }
-}
-
-@media screen and (min-width: 768px) {
   .nav-list {
-    text-align: center;
+    top: 159px;
+  }
+
+  .nav-link {
+    font-size: 26px;
   }
 }
 
