--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <!-- BURGER-MENU  -->
-      <div class="burger-menu animate__fadeIn" id="menu-container" data-menu>
+      <div class="burger-menu" id="menu-container" data-menu>
         <!-- BURGER-MENU NAVIGATION -->
         <ul class="nav-list">
           <li class="nav-item">
