--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -55,7 +55,7 @@
   top: 109px;
   left: 50%;
   width: fit-content;
-  transform: translatex(-50%) scale(1);
+  transform: translatex(-50%);
   text-align: start;
 }
 
