--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -1,17 +1,11 @@
 .our-program{
     padding-top: 50px;
-    padding-bottom: 390px;
+    padding-bottom: 280px;
     background-color: var(--main-color);
   }
 
 .our-program .container{
     position: relative;
-}
-
-.our-program-wrapper{
-  background-image: url('../images/our-program/bg-our-program-mobile.png');
-  background-repeat: no-repeat;
-  background-position: 1473px 200px;
 }
 
 .our-program-title{
@@ -137,8 +131,21 @@
     opacity: 0.5;
 }
 
+.our-program-bg{
+  position: absolute;
+  top: 1405px;
+  left: 200px;
+  background-image: url('../images/our-program/bg-our-program-mobile.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 136px;
+  width: 176px;
+  overflow: hidden;
+}
+
 @media screen and (min-width: 768px){
     .our-program{
+        display: block;
         padding-top: 60px;
         padding-bottom: 160px;
     }
@@ -199,6 +206,14 @@
         }
     
     }
+
+    .our-program-bg{
+      top: 750px;
+      left: 383px;
+      background-image: url('../images/our-program/bg-our-program-tablet.png');
+      height: 280px;
+      width: 384px;
+    }
 }
 
 @media screen and (min-width: 1344px){
@@ -216,9 +231,9 @@
         margin-left: 0;
 
         &::before{
-          left: -15px;
+          left: 0;
           top: 140px;
-          width: 1684px;
+          width: 1344px;
           height: 1px;
       }
     }
@@ -254,7 +269,16 @@
 
     .our-program-topic-list{
       margin-top: 10px;
-  }
+    }
+
+    .our-program-bg{
+      top: 450px;
+      left: -250px;
+      background-image: url('../images/our-program/bg-our-program-desktop.png');
+      width: 760px;
+      height: 502px;
+    }
+
 }
 
 
