добавила main-footer-container

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container">
+    <div class="main-footer-container">
         <ul class="footer-list-button">
             <li class="footer-button-item">
                 <button type="button" class="footer-button transition">
