Лінія черер абсолют на секцию.

--- a/src/sass/layout/_our_programm.scss
+++ b/src/sass/layout/_our_programm.scss
@@ -111,6 +111,7 @@
   }
 }
 
+
 @media screen and (min-width: 768px) {
   .our-programm-section {
     position: relative;
@@ -200,6 +201,15 @@
 @media screen and (min-width: 1344px) {
   .our-programm-section {
     height: 1570px;
+    &::before{
+    position: absolute;
+    content: " ";
+    top: 278px;
+    height: 1px;
+    width: 100vw;
+   background-color: #fff;
+   z-index: 0;
+    } 
   }
 
   .dop-contener {
@@ -209,7 +219,17 @@
   .our-programm__list {
     display: flex;
     padding-left: 0;
-  }
+  //   &::before{
+  //   position: absolute;
+  //   display: inline-block;
+  //   content: " ";
+  //   height: 1px;
+  //   width: 100vw;
+  //   background-color: #fff;
+  //   // z-index: 2;
+  //  }   
+   }
+  
 
   .our-programm {
     padding-top: 120px;
@@ -318,7 +338,9 @@
   }
 }
 
-.our-programm__img{
+
+
+.our-programm__img {
   position: absolute;
   opacity: 50%;
   bottom: -34px;
@@ -344,3 +366,15 @@
  
   }
 }
+
+@media screen and (min-width: 1344px){
+  .vl{
+    display: none;
+  }
+}
+// .our-programm__list::before{
+//   display: block;
+//   height: 10px;
+//   width: 300px;
+//   color: red;
+// }
