--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,9 +1,11 @@
 .footer-logo{
+    width: 84px;
     margin-top: 30px;
     margin-left: 98px;
 }
 
 .footer-logo-two{
+    width: 84px;
     margin-left: 98px;
 }
 
@@ -15,7 +17,7 @@
     fill: var(--accent-color);
     float: left;
     margin-left: 40px;
-    margin-right: 8px;
+    margin-right: 10px;
 }
 
 .footer-number{
@@ -67,11 +69,14 @@
         display: flex;
         margin-top: 40px;
         margin-bottom: 40px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
     }
 
     .footer-flex-container{
         display: flex;
-        align-items: baseline;
+        align-items: center;
         width: auto;
         height: 125px;
     }
@@ -81,18 +86,20 @@
     }
 
     .footer-icon-tel{
-        margin-left: 275px;
         margin-right: 10px;               
         top: 50%;                         
         transform: translate(0, -50%);
+        margin-left: 0px;
+        float: left;
     }
 
     .footer-number{
+        display: block;
         font-weight: 600;
-        font-size: 18px;
-        line-height: 1.2px;
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 0.08em;
         display: table-cell;
-        vertical-align: middle;
     }
 
 
@@ -106,8 +113,17 @@
     }
 
     .footer-logo-link{
-        margin: -67px;                         
-        transform: translate(0, -20%);
+        margin: 0px;
+    }
+
+    .footer-logo{
+        width: 125px;
+        margin: 0px;
+    }
+
+    .footer-logo-two{
+        width: 125px;
+        margin: 0px;
     }
 
     .footer-icon-tel{
@@ -115,8 +131,8 @@
         height: 23px;
     }
 
-    .footer-img{
-        margin-right: 20px;
+    .footer-address{
+        margin-left: 203px;
     }
 }
 
@@ -134,7 +150,7 @@
     .footer-icon-tel{
         width: 30px; 
         height: 28px;
-        margin-left: 370px;
+        margin-left: 400px;
     }
 
     .footer-number{
@@ -162,3 +178,9 @@
         margin-left: 183px;
     }
  }  
+
+
+
+
+
+
