--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -139,7 +139,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 
 @media screen and (min-width: 768px){
 
-
     .form-title{
         font-size: 26px;
         line-height: 1.307;
@@ -161,7 +160,8 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     }
 
     .form-button{
-        margin-left: 234px;
+        margin-top: 50px;
+        margin-left: 216px;
     }
 
     .form-input{
@@ -173,6 +173,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 
 
 @media screen and (min-width: 1680px){
+
     .form-title{
         font-weight: 800;
         font-size: 46px;
@@ -213,6 +214,10 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 
     .form-container{
         max-width: 1680px;
+    }
+
+    .footer-logo-link{
+        padding-left: 31px;
     }
 
  }
