--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,21 +26,21 @@
       <div>
         <ul class="footer-social-list transition">
             <li class="footer-social-item">
-                <a class="footer-social-link" href="">
+                <a class="footer-social-link" href="https://github.com/">
                     <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-cat"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-item">
-                <a class="footer-social-link transition" href="">
+                <a class="footer-social-link transition" href="https://telegram.org/">
                     <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-item">
-                <a class="footer-social-link transition" href="">
+                <a class="footer-social-link transition" href="https://facebook.com/">
                     <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-fb"></use>
                     </svg>
