--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -16,10 +16,11 @@
 
 .products-list-item {
   position: relative;
+  height: 485px;
   max-width: 220px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  margin-top: 144px;
   padding-top: 43px;
   padding-bottom: 43px;
   padding-left: 20px;
@@ -51,15 +52,14 @@
     content: '';
     display: block;
     width: 100%;
-    height: 252px;
+    height: 100%;
     background-image: url('../images/products/home-pic1-desktop.png');
-    background-color: #ffb8ca;
     border-radius: 24px;
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 30px;
     position: absolute;
-    bottom: 70%;
+    bottom: 40%;
   }
 }
 
@@ -74,7 +74,6 @@
 .next-btn-products {
   width: 40px;
   height: 40px;
-  margin: 0;
   padding: 0;
   background-color: transparent;
   border: none;
@@ -94,6 +93,7 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-top: 161px;
 }
 
 .products-item-description {
@@ -105,4 +105,6 @@
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
