--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -21,7 +21,7 @@
   padding-bottom: 25px;
   padding-left: 5px;
   padding-right: 5px;
-  transition: background-color var(--transition-function);
+  transition: all var(--transition-function);
 }
 
 .approach-link {
