--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,20 +1,24 @@
 @media screen and(min-width:320px) and(max-width:767px) {
   .description {
     background: #ffffff;
+    margin-bottom: 50px;
   }
   .description-list {
     display: block;
 
+    .item:not(:last-child) {
+      margin-bottom: 30px;
+    }
     .item {
       display: flex;
       justify-content: center;
-      padding-bottom: 30px;
       .description-text {
         max-width: 146px;
         margin-left: 10px;
         font-weight: bold;
         font-size: 14px;
-        line-height: 20px;
+
+        line-height: 1.4;
 
         display: flex;
         align-items: center;
@@ -39,7 +43,6 @@
         max-width: 146px;
         margin-left: 10px;
 
-        font-family: Montserrat;
         font-style: normal;
         font-weight: bold;
         font-size: 14px;
@@ -69,17 +72,15 @@
       .description-text {
         max-width: 146px;
         font-weight: bold;
-        font-size: 14px;
-        line-height: 20px;
 
-        display: flex;
-        align-items: center;
+        font-size: 20px;
+        line-height: 33px;
         letter-spacing: 0.08em;
       }
     }
   }
   .description-svg {
-    width: 58px;
-    height: 60px;
+    width: 100px;
+    height: 102px;
   }
 }
