добавляет якоря в навигации в хедере

--- a/src/partials/approach.html
+++ b/src/partials/approach.html
@@ -1,4 +1,4 @@
-<section class="approach">
+<section class="approach" id="approach">
     <div class="container">
 
         <h2 class="approach-title title">Как мы это делаем</h2>
