--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- FOOTER -->
-<footer class="footer">
+<footer class="footer" id="contacts">
     <div class="container">
       <!-- Светлая тема -->
       <div class="footer-light">
