--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,16 +22,16 @@
       <!-- NAV-DESKTOP-->
       <ul class="nav-list-desktop">
         <li class="nav-item-desktop">
-          <a class="nav-link-desktop" href="index.html">Программы обучения</a>
+          <a class="nav-link-desktop" href="#program">Программы обучения</a>
         </li>
         <li class="nav-item-desktop">
-          <a class="nav-link-desktop" href="#">О нас</a>
+          <a class="nav-link-desktop" href="#teacher">О нас</a>
         </li>
         <li class="nav-item-desktop">
-          <a class="nav-link-desktop" href="#">Варианты обучения</a>
+          <a class="nav-link-desktop" href="#approach">Варианты обучения</a>
         </li>
         <li class="nav-item-desktop">
-          <a class="nav-link-desktop" href="#">Контакты</a>
+          <a class="nav-link-desktop" href="#contacts">Контакты</a>
         </li>
       </ul>
 
