--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="our-program">
+<section class="our-program" id="program">
     <div class="our-program__anchor">
         <a id="our-program" name="service" class="our-program__anchor-link"></a>
     </div>
