--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -1,5 +1,5 @@
 <!-- Section teacher -->
-<section class="section-teacher">
+<section class="section-teacher" id="teacher">
     <div class="container">
         <h1 class="section-teacher_title">Преподаватель</h1>
         <div class="section-teacher_biography">
