--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -52,6 +52,7 @@
           &:hover,
           &:focus {
             color: var(--accent-color);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
         }
       }
@@ -164,6 +165,7 @@
           &:hover,
           &:focus {
             color: var(--accent-color);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
         }
       }
@@ -276,6 +278,7 @@
           &:hover,
           &:focus {
             color: var(--accent-color);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
         }
       }
