--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -286,7 +286,7 @@
     content: '';
     width: 22px;
     height: 30px;
-    background-image: url(../images/study/fire.svg);
+    background-image: url(../images/study/fire2.svg);
     background-repeat: no-repeat;
     position: absolute;
     left: 112px;
@@ -298,8 +298,7 @@
     height: 40px;
     background-image: url(../images/study/line.svg);
     position: absolute;
-    left: 118px;
-    margin-top: 4px;
+    left: 121px;
     color: #b9b9b9;
   }
 }
