--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,9 +15,7 @@
           <p class="hero-text hero-text--orange">+25 баллов</p>
         </div>
         <div class="btn-box">
-          <button type="button" class="btn hero-btn">
-            хочу на бесплатное занятие
-          </button>
+          <a href="#form" class="btn hero-btn"> хочу на бесплатное занятие </a>
         </div>
       </div>
       <div class="hero-right"></div>
